--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <link rel="dx-theme" data-theme="material.blue.light" href="dx.material.blue.light.css" data-active="false">
+  <link rel="dx-theme" data-theme="material.orange.light" href="dx.material.orange.light.css" data-active="false">
 </head>
 <body class="dx-viewport">
   <app-root></app-root>
